--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,14 +13,19 @@ source:
 
 build:
   number: 1001
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  skip: true  # [py>36]
+  script:
+    # If cython sources were included, we could just rerender them here to make
+    # the package work with 3.7.
+    # - cythonize sncosmo/*.pyx  # [py>36]
+    - pip install . --no-deps --ignore-installed --no-cache-dir
 
 requirements:
   build:
     - {{ compiler('c') }}
   host:
     - python
-    - setuptools
+    - pip
     - numpy
   run:
     - python
