--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -18,6 +18,10 @@ jobs:
         CONFIG: win_c_compilervs2015python3.6
         CONDA_BLD_PATH: D:\\bld\\
         UPLOAD_PACKAGES: False
+      win_c_compilervs2015python3.7:
+        CONFIG: win_c_compilervs2015python3.7
+        CONDA_BLD_PATH: D:\\bld\\
+        UPLOAD_PACKAGES: False
   steps:
     # TODO: Fast finish on azure pipelines?
     - script: |
