--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  script: ${PYTHON} -m pip install . --no-deps --ignore-installed --no-cache-dir
+  script: {{ PYTHON }} -m pip install . --no-deps --vv
   skip: true  # [py27]
 
 requirements:
